@@ -71,8 +71,8 @@ static VALUE
 vm_invoke_proc(rb_thread_t *th, rb_proc_t *proc, VALUE self, VALUE defined_class,
 	       int argc, const VALUE *argv, const rb_block_t *blockptr);
 
-static rb_serial_t ruby_vm_method_serial = 1;
-static rb_serial_t ruby_vm_constant_serial = 1;
+static rb_serial_t ruby_vm_global_method_state = 1;
+static rb_serial_t ruby_vm_global_constant_state = 1;
 static rb_serial_t ruby_vm_class_serial = 1;
 
 #include "vm_insnhelper.h"
@@ -124,8 +124,8 @@ rb_vm_inc_const_missing_count(void)
  *  This hash includes information about method/constant cache serials:
  *
  *    {
- *      :method_serial=>251,
- *      :constant_serial=>481,
+ *      :global_method_state=>251,
+ *      :global_constant_state=>481,
  *      :class_serial=>9029
  *    }
  *
@@ -138,7 +138,7 @@ rb_vm_inc_const_missing_count(void)
 static VALUE
 vm_stat(int argc, VALUE *argv, VALUE self)
 {
-    static VALUE sym_method_serial, sym_constant_serial, sym_class_serial;
+    static VALUE sym_global_method_state, sym_global_constant_state, sym_class_serial;
     VALUE arg = Qnil;
     VALUE hash = Qnil, key = Qnil;
 
@@ -153,10 +153,10 @@ vm_stat(int argc, VALUE *argv, VALUE self)
 	hash = rb_hash_new();
     }
 
-    if (sym_method_serial == 0) {
+    if (sym_global_method_state == 0) {
 #define S(s) sym_##s = ID2SYM(rb_intern_const(#s))
-	S(method_serial);
-	S(constant_serial);
+	S(global_method_state);
+	S(global_constant_state);
 	S(class_serial);
 #undef S
     }
@@ -167,8 +167,8 @@ vm_stat(int argc, VALUE *argv, VALUE self)
     else if (hash != Qnil) \
 	rb_hash_aset(hash, sym_##name, SERIALT2NUM(attr));
 
-    SET(method_serial, ruby_vm_method_serial);
-    SET(constant_serial, ruby_vm_constant_serial);
+    SET(global_method_state, ruby_vm_global_method_state);
+    SET(global_constant_state, ruby_vm_global_constant_state);
     SET(class_serial, ruby_vm_class_serial);
 #undef SET
 
